--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first ever github repo</title>
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
-    
+    <div>
+        <h3>First blog</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam ex tenetur, eligendi nemo, iusto quam perferendis reiciendis adipisci odit laboriosam blanditiis obcaecati dolorum? Doloribus ratione neque et nam, maiores consequuntur.</p>
+    </div>
+
+    <div>
+        <h3>Second blog</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam ex tenetur, eligendi nemo, iusto quam perferendis reiciendis adipisci odit laboriosam blanditiis obcaecati dolorum? Doloribus ratione neque et nam, maiores consequuntur.</p>
+    </div>
+
+    <div>
+        <h3>Third blog</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam ex tenetur, eligendi nemo, iusto quam perferendis reiciendis adipisci odit laboriosam blanditiis obcaecati dolorum? Doloribus ratione neque et nam, maiores consequuntur.</p>
+    </div>
 </body>
 </html>
